# s3-clone

./: .env  Cargo.toml
migrations/: 00001_create_users.sql  00002_create_buckets.sql  00003_create_files.sql
src/: config.rs  main.rs
src/authentication/: jwt.rs  middleware.rs  mod.rs
src/db/: postgres.rs
src/handlers/: mod.rs
src/middleware/: auth.rs
src/models/: bucket.rs  file.rs  mod.rs  user.rs
src/routes/: auth.rs  bucket.rs  file.rs  mod.rs
