[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-multipart = "0.6.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "chrono"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
futures = "0.3.29"
env_logger = "0.10.1"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0.75"
thiserror = "1.0.50"
sanitize-filename = "0.5.0"
actix-cors = "0.6.4"
http = "0.2.12"